# agama

.github/workflows/: ci-rust.yml  migrate-wicked-ci.yml  migrate-wicked-integration-tests.yml  obs-build.yml
rust/: Cargo.toml
rust/agama-cli/: Cargo.toml
rust/agama-cli/src/: commands.rs  main.rs  wicked.rs
rust/agama-dbus-server/src/network/: error.rs  model.rs
rust/agama-dbus-server/src/network/nm/: adapter.rs  dbus.rs  model.rs
rust/agama-migrate-wicked/: Cargo.toml
rust/agama-migrate-wicked/src/: interface.rs  lib.rs  main.rs  migrate.rs  reader.rs
rust/agama-migrate-wicked/tests/: bond_active-backup.xml  eth2.xml  eth3.xml  ipv4_static.xml  ipv6_dhcp.xml  ipv6_static.xml  test.sh
rust/agama-migrate-wicked/tests/bond_active-backup/system-connections/: bond0.nmconnection
rust/agama-server/: Cargo.toml
rust/agama-server/src/: lib.rs
rust/agama-server/src/network/: model.rs
rust/agama-server/src/network/nm/: dbus.rs  model.rs
rust/agama-server/src/web/docs/: network.rs
rust/migrate-wicked/: Cargo.toml
rust/migrate-wicked/src/: bond.rs  interface.rs  main.rs  migrate.rs  netconfig.rs  reader.rs  vlan.rs  wireless.rs
rust/migrate-wicked/tests/: test.sh
rust/migrate-wicked/tests/static_dns/conf.d/: global_dns.conf
rust/migrate-wicked/tests/static_dns/netconfig/: config
rust/migrate-wicked/tests/static_dns/system-connections/: eth0.nmconnection  lo.nmconnection
rust/migrate-wicked/tests/wireless/wicked_xml/: wireless.xml
rust/package/: agama.changes
service/lib/agama/storage/configs/: partition.rb
(+1 files in other folders)
