[package]
name = "agama-migrate-wicked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
agama-lib = { path="../agama-lib" }
regex = "1.9.5"
agama-dbus-server = { path="../agama-dbus-server" }
async-std = "1.12.0"
